feat(core) Complete assignment

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Get Github Orgs</title>
-    <link href="/css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
     <h1>Get GitHub Orgs</h1>
-    <button type="button" name="GetGithubOrgs" onclick=getGithubOrgs()></button>
-    <script src=//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js></script>
-    <script src="app.js"></script>
+    <h2>An assignment from the Iron Yard FEE Readings</h2>
+    <div class="btn-div">
+      <button type="button" name="GetGithubOrgs" onclick=getGithubOrgs()>Get GitHub Orgs</button>
+    </div>
+    <h2>Output:</h2>
+    <div id="output">
+
+    </div>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
