feat(core) Update JS and CSS links in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Get Github Orgs</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
     <h1>Get GitHub Orgs</h1>
@@ -17,6 +17,6 @@
 
     </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
