--- a/index.html
+++ b/index.html
@@ -9,14 +9,25 @@
   <body>
     <h1>Get GitHub Orgs</h1>
     <h2>An assignment from the Iron Yard FEE Readings</h2>
-    <div class="btn-div">
-      <button type="button" name="GetGithubOrgs" onclick=getGithubOrgs()>Get GitHub Orgs</button>
+    <div class="input-wrapper">
+      <div class="input-div">
+        <p>
+          GitHub User name (optional):
+        </p><br />
+        <input id="user" class="input" title="User"
+        type="text" name="user" value="">
+      </div>
+      <div class="btn-div">
+        <button class="input" type="button" name="GetGithubOrgs" onclick=getGithubOrgs(value)>Get GitHub Orgs</button>
+      </div>
     </div>
-    <h2>Output:</h2>
-    <div id="output">
+    <div class="output-wrapper">
+      <h2>Output:</h2>
+      <div id="output">
 
+      </div>
     </div>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery-3.1.1.js"></script>
     <script src="./js/app.js"></script>
   </body>
 </html>
